--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
+    "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
+    "express": "^4.19.2",
     "uuid": "^9.0.1",
     "ws": "^8.17.0"
   }
